[package]
name = "sonicterm-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SonicTerm Terminal — PTY + process probes (+ optional SSH backend)"

[lints]
workspace = true

[features]
default = []
# Optional SSH client backend. Pulls in russh + a tokio runtime, so it's
# off by default to keep the cold build slim. Enable with
# `cargo build -p sonicterm-io --features ssh` (or via the bin crate).
ssh = ["dep:russh", "dep:tokio", "dep:async-trait"]
# Exposes test-only helpers (`ShellDialect` for the e2e gate examples + integration
# tests). Not for shipping use — gated behind cfg(feature = "test_support") so
# production builds don't pull it in.
test_support = []

[dependencies]
sonicterm-types.workspace = true
portable-pty.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes = "1"
russh = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
async-trait = { version = "0.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[target.'cfg(unix)'.dependencies]
# Needed by `PtyHandle::Drop` to send an explicit SIGKILL to the child
# shell pid before invoking portable-pty's `Child::kill`. See #598 (LM-007).
libc = "0.2"

[dev-dependencies]
sonicterm-grid.workspace = true
sonicterm-vt.workspace = true
sonicterm-cfg.workspace = true
serde_json = "1"
# Examples need the ShellDialect helpers. Enable test_support via dev-deps
# so `cargo build --examples` / `cargo run --example` pull it in automatically.
sonicterm-io = { path = ".", features = ["test_support"] }

[[example]]
name = "pty_dump_unicode"
path = "examples/pty_dump_unicode.rs"
