[package]
name = "sonicterm-mux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "sonic-mux"
path = "src/main.rs"

[lib]
name = "sonicterm_mux"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
bincode = "1.3"
interprocess = "2.2"
portable-pty = { workspace = true }

[dev-dependencies]
tempfile = "3"
